# esp32-idf-base

./: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  blink.c  constants.h  main.c  utils.c  utils.h  ws2812.c  ws2812.h
main/bt_manager/: blufi_security.c  blufi_security.h  bt_manager.c  bt_manager.h
main/wifi_manager/: ap.json  code.js  dns_server.c  dns_server.h  http_server.c  http_server.h  index.html  json.c  style.css  wifi_manager.c  wifi_manager.h
